--- a/slides.pod
+++ b/slides.pod
@@ -84,7 +84,7 @@ G<https://placekitten.com/500/500>
 
 =begin note
 
-Also, this used to have a bunch of concepts, descriptions, types, and techniques. But it took way too long! See the OLD/ directory, in the github repo.
+This used to have a bunch of descriptions, types, and techniques. But it took way too long! See the OLD/ directory, in the github repo.
 
 =end note
 
@@ -140,13 +140,11 @@ How do you structure a tune?
 
 =begin note
 
-These are the questions we will have to answer if we want to create algorithmic music that follows traditional theory.
+These are questions to answer if we want to follow traditional theory.
 
 But if we don't care about traditions, then anything goes. And MIDI is probably not your thing.
 
-The idea of phrase development itself is controversial. E.g. Brian Eno, Primus guitar solos.
-
-There are as many answers as there are musicians. (And there are more ways to make algorithmic music than there are programmers.)
+For instance, the idea of phrase development itself is controversial. E.g. Brian Eno, Primus guitar solos.
 
 =end note
 
