--- a/slides.pod
+++ b/slides.pod
@@ -16,7 +16,7 @@ L<TPRC 2023|https://tprc.to/tprc-2023-tor/> &#x2022; Toronto, ON
 
 Let's talk about music!
 
-The first part will cover some concepts, which I will try to whip-though, so we can get to the algorithms.
+The first part will cover concepts, which I will try to whip-though, so we can get to the algorithms.
 
 If you want to follow along or reread what just happened, these slides are live at the link on the bottom of the pages.
 
